# jobpulse

./: .env.example  .gitignore  Dockerfile  HackerNews.ipynb  README.md  database.ipynb  database.py  debug_counts.py  demo.py  docker-compose.yaml  jobs.json  models.py  pyproject.toml  remoteOK.ipynb  requirements.txt  test.ipynb  utils.py
.streamlit/: config.toml
RAG/: LLMService.py  LLM_service.py  RAGFusionStrategy.py  RetrievalStrategy.py  SimpleRetrievalStrategy.py  __init__.py  rag_chat.py
adapters/: remoteOK_adapter.py
config/: airflow.cfg
dags/: daily_job_scraper.py  remoteok_to_bigquery_qdrant.py
dags/include/: JobClassificationService.py  database.py  embedding_service.py  models.py  vector_db.py
dags/include/adapters/: remoteOK_adapter.py
dags/include/scraper/: remoteOK.py
data/: jobpulse.db  test_jobpulse.db
data/test_chroma_db/: chroma.sqlite3
scripts/: debug_db.py  seed_db.py
services/: BigQueryService.py  JobClassificationService.py  embedding_service.py
services/vector_db/: AbstractVectorDB.py  ChromaService.py  QdrantService.py  __init__.py
test_jobpulse.db/: chroma.sqlite3
