[project]
name = "jobpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.3.0",
    "huggingface-hub>=1.9.0",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.2.26",
    "langchain-huggingface>=1.2.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]
