[project]
name = "jobpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow[google]>=3.1.8",
    "beautifulsoup4>=4.14.3",
    "chromadb==1.3.0",
    "fastembed>=0.8.0",
    "huggingface-hub>=1.9.0",
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.2.26",
    "langchain-huggingface>=1.2.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "streamlit-echarts>=0.6.0",
    "tqdm>=4.67.3",
]
